--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+
+    <!-- Bootstrap ICON CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
+
+    <!-- Local Custom CSS -->
     <link rel="stylesheet" href="style.css">
     <title>Frontend BootCamp</title>
 </head>
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-4">
 
 
         <div class="container">
@@ -54,13 +62,16 @@
     <!-- .Navbar -->
 
     <!-- showcase -->
-    <section class="bg-dark text-light p-5 text-center">
+    <section class="bg-dark text-light p-5   text-center text-sm-start  ">
         <div class="container">
-            <div class="d-sm-flex">
+            <div class="d-sm-flex align-items-center justify-content-between">
                 <div class="p-4">
-                    <h1>Become a Web Devloper</h1>
+                    <h1>Become a <span class=" text-warning ">Web Developer</span> </h1>
+                    <p class="lead my-10">We focus on teaching our students essential fundamnetals from the ground up
+                        to prepare them to get that first job </p>
+                    <button class="btn btn-primary btn-lg">Get started </button>
                 </div>
-                <img class="img-fluid w-50" src="img/undraw_Browsing_re_eycn.svg" alt="" srcset="">
+                <img class="img-fluid w-50 d-none d-sm-block" src="img/undraw_Browsing_re_eycn.svg" alt="" srcset="">
             </div>
         </div>
 
@@ -69,6 +80,155 @@
 
     <!-- .showcase -->
 
+    <!-- news letter -->
+
+    <section class="bg-primary text-light p-5">
+        <div class="container">
+            <div class="d-md-flex align-items-center justify-content-between">
+
+                <h3 class=" mb-3 mb-md-0">Sign up for our newsletter</h3>
+                <div class="input-group newsinput">
+                    <input type="text" class="form-control " placeholder="Enter Your Email">
+                    <button class="btn btn-lg btn-dark" type="button">Button</button>
+                </div>
+
+
+            </div>
+
+        </div>
+    </section>
+    <!-- .news letter -->
+
+    <!-- boxes -->
+    <section class="p-5">
+        <div class="container">
+            <div class="row text-center g-4">
+                <!-- rows -->
+                <div class="col-md ">
+                    <!-- card1 -->
+                    <div class="card bg-dark text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-laptop"></i>
+                            </div>
+                            <h3 class="card-title mb-3">
+                                virtual
+                            </h3>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti necessitatibus
+                                possimus suscipit ad unde laudantium?
+                            </p>
+                            <a href="#" class="btn btn-primary btn-text-dark">Read More</a>
+                        </div>
+                    </div>
+                    <!-- .card1 -->
+                </div>
+
+                <div class="col-md ">
+                    <!-- card2 -->
+                    <div class="card bg-secondary text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-person-square"></i>
+                            </div>
+                            <h3 class="card-title mb-3">
+                                Hybrid
+                            </h3>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti necessitatibus
+                                possimus suscipit ad unde laudantium?
+                            </p>
+                            <a href="#" class="btn btn-dark btn-text-dark">Read More</a>
+                        </div>
+                    </div>
+                    <!-- .card2 -->
+
+                </div>
+
+                <div class="col-md ">
+                    <!-- card3 -->
+                    <div class="card bg-success text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-people"></i>
+                            </div>
+                            <h3 class="card-title mb-3">
+                                In Person
+                            </h3>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti necessitatibus
+                                possimus suscipit ad unde laudantium?
+                            </p>
+                            <a href="#" class="btn btn-secondary btn-text-dark">Read More</a>
+                        </div>
+                    </div>
+                    <!-- .card3 -->
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- .boxes -->
+    <!-- learn Sections -->
+
+    <!-- Learn Fundamentlas Section -->
+    <selction class="pt-5 mt-10 " id="learn">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md">
+                    <img src="img/Fundamentals.svg" alt="" class="img-fluid">
+                </div>
+                <div class="col-md p-5">
+                    <h2>Learn the fundamentals</h2>
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid in sed voluptatibus quae dolore
+                        laboriosam!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ex sunt ad dolorem sapiente
+                        ducimus quibusdam quaerat officiis delectus dignissimos libero quam ipsum quia quidem culpa,
+                        dicta, repellendus assumenda inventore.
+                    </p>
+                    <a href="#" class="btn btn-light mt-3">
+                        <i class="bi bi-chevron-right"></i> Learn More
+                    </a>
+                </div>
+            </div>
+        </div>
+    </selction>
+    <!-- .Learn Fundamentlas Section -->
+
+
+
+    <!-- Learn React Section -->
+    <selction class="  pt-5 " id="learn">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+
+                <div class="col-md p-5">
+                    <h2>Learn React</h2>
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid in sed voluptatibus quae dolore
+                        laboriosam!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ex sunt ad dolorem sapiente
+                        ducimus quibusdam quaerat officiis delectus dignissimos libero quam ipsum quia quidem culpa,
+                        dicta, repellendus assumenda inventore.
+                    </p>
+                    <a href="#" class="btn btn-light mt-3">
+                        <i class="bi bi-chevron-right"></i> Learn More
+                    </a>
+                </div>
+                <div class="col-md">
+                    <img src="img/undraw_react_y7wq.svg" alt="" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </selction>
+
+    <!-- Learn React Section -->
+    <!-- .learn Sections -->
 
 
 
