--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-4">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-4 fixed-top ">
 
 
         <div class="container">
@@ -62,7 +62,7 @@
     <!-- .Navbar -->
 
     <!-- showcase -->
-    <section class="bg-dark text-light p-5   text-center text-sm-start  ">
+    <section class="p-5 bg-dark text-light p-5   text-center text-sm-start  ">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div class="p-4">
@@ -172,10 +172,10 @@
     <!-- learn Sections -->
 
     <!-- Learn Fundamentlas Section -->
-    <selction class="pt-5 mt-10 " id="learn">
+    <section id="learn" class="p-5  ">
         <div class="container">
             <div class="row align-items-center justify-content-between">
-                <div class="col-md">
+                <div class="col-md ">
                     <img src="img/Fundamentals.svg" alt="" class="img-fluid">
                 </div>
                 <div class="col-md p-5">
@@ -189,20 +189,20 @@
                         ducimus quibusdam quaerat officiis delectus dignissimos libero quam ipsum quia quidem culpa,
                         dicta, repellendus assumenda inventore.
                     </p>
-                    <a href="#" class="btn btn-light mt-3">
+                    <a href="#" class="btn  mt-3">
                         <i class="bi bi-chevron-right"></i> Learn More
                     </a>
                 </div>
             </div>
         </div>
-    </selction>
+    </section>
     <!-- .Learn Fundamentlas Section -->
 
 
 
     <!-- Learn React Section -->
-    <selction class="  pt-5 " id="learn">
-        <div class="container">
+    <section id="learn" class=" p-5 bg-dark text-light">
+        <div class="container ">
             <div class="row align-items-center justify-content-between">
 
                 <div class="col-md p-5">
@@ -225,15 +225,122 @@
                 </div>
             </div>
         </div>
-    </selction>
+    </section>
 
     <!-- Learn React Section -->
     <!-- .learn Sections -->
 
+    <!-- Frequently asked questions -->
+    <section class="p-5" id="questions">
+        <div class="container">
+            <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+            <!-- accordian -->
+            <div class="accordion accordion-flush" id="questions">
+                <!-- item1 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#question-one">
+                            Where exatly are you located?
+                        </button>
+                    </h2>
+                    <div id="question-one" class="accordion-collapse collapse" data-bs-parent="#questions">
+                        <div class="accordion-body">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit doloribus expedita
+                            aspernatur nihil aliquid, dicta, provident ex voluptatum eius quidem illum molestias nemo
+                            commodi repellendus officia eveniet quo tempore adipisci minus ab fugiat voluptates harum?
+                            Qui nostrum consectetur suscipit, aperiam incidunt commodi repellat dolor non placeat
+                            impedit tempore debitis. Quisquam.
+                        </div>
+                    </div>
+                </div>
+                <!-- item 2 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#question-two">
+                            Is there any trial available?
+                        </button>
+                    </h2>
+                    <div id="question-two" class="accordion-collapse collapse" data-bs-parent="#questions">
+                        <div class="accordion-body">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit doloribus expedita
+                            aspernatur nihil aliquid, dicta, provident ex voluptatum eius quidem illum molestias nemo
+                            commodi repellendus officia eveniet quo tempore adipisci minus ab fugiat voluptates harum?
+                            Qui nostrum consectetur suscipit, aperiam incidunt commodi repellat dolor non placeat
+                            impedit tempore debitis. Quisquam.
+                        </div>
+                    </div>
+                </div>
+                <!-- item3 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#question-three">
+                            What Do I need to Know?
+                        </button>
+                    </h2>
+                    <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
+                        <div class="accordion-body">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit doloribus expedita
+                            aspernatur nihil aliquid, dicta, provident ex voluptatum eius quidem illum molestias nemo
+                            commodi repellendus officia eveniet quo tempore adipisci minus ab fugiat voluptates harum?
+                            Qui nostrum consectetur suscipit, aperiam incidunt commodi repellat dolor non placeat
+                            impedit tempore debitis. Quisquam.
+                        </div>
+                    </div>
+                </div>
+                <!-- item4 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#question-four">
+                            Are Online Batches Available ?
+                        </button>
+                    </h2>
+                    <div id="question-four" class="accordion-collapse collapse" data-bs-parent="#questions">
+                        <div class="accordion-body">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit doloribus expedita
+                            aspernatur nihil aliquid, dicta, provident ex voluptatum eius quidem illum molestias nemo
+                            commodi repellendus officia eveniet quo tempore adipisci minus ab fugiat voluptates harum?
+                            Qui nostrum consectetur suscipit, aperiam incidunt commodi repellat dolor non placeat
+                            impedit tempore debitis. Quisquam.
+                        </div>
+                    </div>
+                </div>
+                <!-- item5 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#question-five">
+                            Will I Get a Job After Completion?
+                        </button>
+                    </h2>
+                    <div id="question-five" class="accordion-collapse collapse" data-bs-parent="#questions">
+                        <div class="accordion-body">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit doloribus expedita
+                            aspernatur nihil aliquid, dicta, provident ex voluptatum eius quidem illum molestias nemo
+                            commodi repellendus officia eveniet quo tempore adipisci minus ab fugiat voluptates harum?
+                            Qui nostrum consectetur suscipit, aperiam incidunt commodi repellat dolor non placeat
+                            impedit tempore debitis. Quisquam.
+                        </div>
+                    </div>
+                </div>
 
+            </div>
+            <!-- .accordian -->
 
+        </div>
+    </section>
 
+    <!-- .Frequently asked questions -->
 
+    <!--  Instructor Section-->
+    <section id="instructors" class="p-5 bg-primary">
+
+    </section>
+
+    <!--  .Instructor Section-->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
