--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- Bootstrap ICON CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
+    <!-- mapbox CDN -->
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+
 
     <!-- Local Custom CSS -->
     <link rel="stylesheet" href="style.css">
@@ -337,15 +340,147 @@
 
     <!--  Instructor Section-->
     <section id="instructors" class="p-5 bg-primary">
+        <div class="container">
+            <h2 class="text-center text-white">Our Afiliated Instrustors</h2>
+            <p class="lead text-center text-white mb-5">
+                Our Instructors have years of experience and have deployed production-ready Web-Apps
+            </p>
+            <div class="row g-4">
+                <!-- card1 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/men/10.jpg" class="rounded-circle mb-3"
+                                alt="">
+                            <h3 class="card-title mb-3">John Wick</h3>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
+                                asperiores.</p>
+                            <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- .card1 -->
 
+                <!-- card2 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/women/10.jpg" class="rounded-circle mb-3"
+                                alt="">
+                            <h3 class="card-title mb-3">Anna Bella</h3>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
+                                asperiores.</p>
+                            <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- .card2 -->
+
+                <!-- card3 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://i.postimg.cc/j20fR686/shub.jpg" class="rounded-circle mb-3 mx-auto"
+                                alt="">
+                            <h3 class="card-title mb-3">Wilhelm Michto</h3>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
+                                asperiores.</p>
+                            <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- .card3 -->
+
+                <!-- card4 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/women/1.jpg" class="rounded-circle mb-3"
+                                alt="">
+                            <h3 class="card-title mb-3">Nora Wolf</h3>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
+                                asperiores.</p>
+                            <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!--  .Instructor Section-->
 
+    <!-- Contact  info-->
+    <section class="p-5">
+        <div class="container mx-5">
+            <div class="row g-4">
+                <div class="col-md">
+                    <h2 class="text-center mb-4">Contact Info</h2>
+                    <ul class="list-group list-group-flush lead">
+                        <!-- address -->
+                        <li class="list-group-item">
+                            <span class="fw-bold">Main Location:</span> El Castilo 50 400705
+                        </li>
+                        <!-- phone no -->
+                        <li class="list-group-item">
+                            <span class="fw-bold">Phone No:</span> +91 8773452671
+                        </li>
+                        <!-- Student phone no -->
+                        <li class="list-group-item">
+                            <span class="fw-bold">Student Phone No:</span> +91 2273452671
+                        </li>
+                        <!-- Support Email -->
+                        <li class="list-group-item">
+                            <span class="fw-bold">Support Email:</span> Frontendboot.gmail.com
+                        </li>
+                        <!-- Grivience email -->
+                        <li class="list-group-item">
+                            <span class="fw-bold">Grivience Support:</span> Frontendboot.support.gmail.com
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md">
+                    <div id="map"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- .Contact -->
 
+
+
+
+    <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+
+    <!-- map box script -->
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
+
+    <!-- custom script -->
+    <script>
+        mapboxgl.accessToken = 'pk.eyJ1Ijoibm9yYTc1MDYiLCJhIjoiY2t0NXAzNGFyMDQ0MTJxcGhydWFtYnZ6ciJ9.R7PdBntZkWLGCbSHq3td2Q';
+        var map = new mapboxgl.Map({
+            container: 'map',
+            style: 'mapbox://styles/mapbox/streets-v11'
+        });
+    </script>
+
+
 </body>
 
 </html>
