--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 </head>
 
 <body>
+
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-4 fixed-top ">
 
@@ -64,6 +66,16 @@
     </nav>
     <!-- .Navbar -->
 
+    <!-- Alert
+    <div id="alert" class="alert alert-dark alert-dismissible fade show mt-5" role="alert">
+        <strong>hey there!</strong> You should check out my <a href="https://github.com/Frostdev7506" class="h4">Github
+            Page</a>
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+    </div> -->
+
+
+
+
     <!-- showcase -->
     <section class="p-5 bg-dark text-light p-5   text-center text-sm-start  ">
         <div class="container">
@@ -92,7 +104,7 @@
                 <h3 class=" mb-3 mb-md-0">Sign up for our newsletter</h3>
                 <div class="input-group newsinput">
                     <input type="text" class="form-control " placeholder="Enter Your Email">
-                    <button class="btn btn-lg btn-dark" type="button">Button</button>
+                    <button id="newsletter" class="btn btn-lg btn-dark" type="button">Button</button>
                 </div>
 
 
@@ -470,6 +482,23 @@
     </footer>
     <!-- .Footer -->
 
+    <!-- Toast -->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+        <div id="liveToast" class="toast" role="alert">
+            <div class="toast-header">
+                <img src="..." class="rounded me-2" alt="...">
+                <strong class="me-auto">Frontend BootCamp</strong>
+                <small>11 mins ago</small>
+                <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+            </div>
+            <div class="toast-body">
+                <strong>hey there!</strong> You should check out my <a href="https://github.com/Frostdev7506"
+                    class="h4">Github
+                    Page</a>
+            </div>
+        </div>
+    </div>
+
 
     <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -482,11 +511,27 @@
 
     <!-- custom script -->
     <script>
+        // mapbox Custom Script
         mapboxgl.accessToken = 'pk.eyJ1Ijoibm9yYTc1MDYiLCJhIjoiY2t0NXAzNGFyMDQ0MTJxcGhydWFtYnZ6ciJ9.R7PdBntZkWLGCbSHq3td2Q';
         var map = new mapboxgl.Map({
             container: 'map',
             style: 'mapbox://styles/mapbox/streets-v11'
         });
+
+
+        // Toast Activation script
+        var toastTrigger = document.getElementById('newsletter')
+        var toastLiveExample = document.getElementById('liveToast')
+        if (toastTrigger) {
+            toastTrigger.addEventListener('click', function () {
+                var toast = new bootstrap.Toast(toastLiveExample)
+
+                toast.show()
+            })
+        }
+
+
+
     </script>
 
 
