--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
 
 <body>
 
+    <!-- Toast
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+        <div id="liveToast" class="toast" role="alert">
+            <div class="toast-header">
+                <img src="..." class="rounded me-2" alt="...">
+                <strong class="me-auto">Frontend BootCamp</strong>
+                <small>11 mins ago</small>
+                <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+            </div>
+            <div class="toast-body">
+                <strong>hey there!</strong> You should check out my <a href="https://github.com/Frostdev7506"
+                    class="h4">Github
+                    Page</a>
+            </div>
+        </div>
+    </div> -->
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-4 fixed-top ">
@@ -61,23 +77,28 @@
                         <a href="#instructors" class="nav-link">Instructors</a>
                     </li>
                 </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="#contact-info" class="nav-link">Contact</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
     <!-- .Navbar -->
 
-    <!-- Alert
-    <div id="alert" class="alert alert-dark alert-dismissible fade show mt-5" role="alert">
+    <!--  Alert -->
+    <div id="alert" class="alert alert-dark alert-dismissible fade show mt-1" role="alert">
         <strong>hey there!</strong> You should check out my <a href="https://github.com/Frostdev7506" class="h4">Github
             Page</a>
         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-    </div> -->
+    </div>
 
 
 
 
     <!-- showcase -->
-    <section class="p-5 bg-dark text-light p-5   text-center text-sm-start  ">
+    <section class="p-5 bg-dark text-light text-center text-sm-start  ">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div class="p-4">
@@ -398,8 +419,8 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https://i.postimg.cc/j20fR686/shub.jpg" class="rounded-circle mb-3 mx-auto"
-                                alt="">
+                            <img src="https://randomuser.me/api/portraits/women/6.jpg"
+                                class="rounded-circle mb-3 mx-auto" alt="">
                             <h3 class="card-title mb-3">Wilhelm Michto</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
                                 asperiores.</p>
@@ -435,7 +456,7 @@
     <!--  .Instructor Section-->
 
     <!-- Contact  info-->
-    <section class="p-5">
+    <section class="p-5" id="contact-info">
         <div class="container mx-5">
             <div class="row g-4">
                 <div class="col-md">
@@ -475,6 +496,12 @@
     <footer class="p-5 bg-dark text-center text-white position-relative">
         <div class="container">
             <p class="lead">Copyright &copy;2021 Frontend Bootcamp</p>
+            <div class="text-center" id="socials">
+                <a href="#"><i class="bi bi-twitter text-white mx-1"></i></a>
+                <a href="#"><i class="bi bi-facebook text-white mx-1"></i></a>
+                <a href="#"><i class="bi bi-linkedin text-white mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-white mx-1"></i></a>
+            </div>
             <a href="" class="position-absolute bottom-0 end-0 p-5">
                 <i class="bi bi-arrow-up-circle h1"></i>
             </a>
@@ -482,22 +509,7 @@
     </footer>
     <!-- .Footer -->
 
-    <!-- Toast -->
-    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-        <div id="liveToast" class="toast" role="alert">
-            <div class="toast-header">
-                <img src="..." class="rounded me-2" alt="...">
-                <strong class="me-auto">Frontend BootCamp</strong>
-                <small>11 mins ago</small>
-                <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
-            </div>
-            <div class="toast-body">
-                <strong>hey there!</strong> You should check out my <a href="https://github.com/Frostdev7506"
-                    class="h4">Github
-                    Page</a>
-            </div>
-        </div>
-    </div>
+
 
 
     <!-- bootstrap script -->
