--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                         <div class="card-body text-center">
                             <img src="https://randomuser.me/api/portraits/women/6.jpg"
                                 class="rounded-circle mb-3 mx-auto" alt="">
-                            <h3 class="card-title mb-3">Wilhelm Michto</h3>
+                            <h3 class="card-title mb-3">Willa Micht</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
                                 asperiores.</p>
                             <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
