--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
                     <h1>Become a <span class=" text-warning ">Web Developer</span> </h1>
                     <p class="lead my-10">We focus on teaching our students essential fundamnetals from the ground up
                         to prepare them to get that first job </p>
-                    <button class="btn btn-primary btn-lg">Get started </button>
+                    <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#enroll">Get started
+                    </button>
                 </div>
                 <img class="img-fluid w-50 d-none d-sm-block" src="img/undraw_Browsing_re_eycn.svg" alt="" srcset="">
             </div>
@@ -110,8 +111,53 @@
 
     </section>
 
-
     <!-- .showcase -->
+
+
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="enroll" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="enrollLabel">SignUp Form</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <p class="lead">Fill out this form and we will get back to you</p>
+                    <form>
+                        <!-- firstname -->
+                        <div class="mb-3">
+                            <label for="first-name" class="col-form-label">First Name</label>
+                            <input type="text" class="form-control" id="first-name">
+                        </div>
+                        <!-- lastname -->
+                        <div class="mb-3">
+                            <label for="last-name" class="col-form-label">Last Name</label>
+                            <input type="text" class="form-control" id="last-name">
+                        </div>
+                        <!-- Email ID -->
+                        <div class="mb-3">
+                            <label for="email" class="col-form-label">Email Id</label>
+                            <input type="text" class="form-control" id="email">
+                        </div>
+                        <!-- Phone -->
+                        <div class="mb-3">
+                            <label for="phone" class="col-form-label">Phone No</label>
+                            <input type="text" class="form-control" id="phone">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
     <!-- news letter -->
 
